2007-03-03  Brian Warner  <warner@lothar.com>

	* buildbot/status/html.py (_hush_pyflakes): hush a pyflakes
	warning about the use of Waterfall here

2007-03-01  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py (IStatus.getBuilder): mention exceptions

2007-02-28  Brian Warner  <warner@lothar.com>

	* buildbot/changes/p4poller.py (P4Source): apply change from Scott
	Lamb to use a more optimal form of 'p4 changes', to reduce server
	load. He reports that this optimization was added to p4d release
	2005.2, but it should work in all versions. Closes #27.
	* buildbot/test/test_p4poller.py: match it

2007-02-27  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/*.py: move all web status stuff into a
	separate directory, in anticipation of splitting it into smaller
	pieces and adding more files. html.py was getting way too big.
	* buildbot/status/classic.css: move it too
	* setup.py: add the new sub-package
	* buildbot/test/test_web.py: match the changes
	* MANIFEST.in: handle the move of classic.css

2007-02-07  Brian Warner  <warner@lothar.com>

	* contrib/OS-X/*: add some launchd .plist files for automatically
	starting a buildmaster or buildslave under OS-X (10.4 or later).
	Thanks to Mark Pauley for these.

2007-02-06  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Requirements): update requirements to
	stop claiming compatibility with python-2.2 or twisted-1.3.x .
	Closes #13.
	* README: mention python-2.5 and twisted-2.5 compatibility

	* buildbot/clients/debug.py: hush pyflakes warnings by removing a
	redundant import
	* buildbot/scripts/startup.py: same, by removing twisted-1.3.0
	compatibility
	* buildbot/status/builder.py: same, by requiring cStringIO
	* buildbot/status/words.py: same, remove twisted-1.3.0 compat
	* buildbot/test/test_vc.py: same
	* buildbot/test/test_web.py:
	* buildbot/test/test_steps.py: same, remove unused import

	* buildbot/status/html.py (StatusResourceBuild.body): oops, close
	the FORM tag
